# fastokens

./: Cargo.toml  NOTICES.txt  README.md
.github/workflows/: ci.yml
examples/: dynamo_ablation.py  dynamo_speed.py  profile_sample.rs  profile_stages.rs  simple_bench.rs
python/: Cargo.toml
python/fastokens/: __init__.py  _compat.py  _native.pyi
python/src/: lib.rs
src/: added_tokens.rs  decoders.rs  json_structs.rs  lib.rs  models.rs  normalizers.rs  post_processors.rs  pre_tokenized.rs
src/decoders/: byte_level.rs
src/models/: bpe.rs
src/pre_tokenizers/: split.rs
