[package]
name = "fastokens"
version = "0.1.0"
edition = "2024"
description = "Fast Tokenizer"
license = "Apache-2.0"
repository = "https://github.com/Atero-ai/fastokens"
homepage = "https://github.com/Atero-ai/fastokens"
documentation = "https://github.com/Atero-ai/fastokens/blob/main/README.md"

[dependencies]
daachorse = "1.0.0"
fancy-regex = "0.17.0"
memchr = "2"
pcre2 = "0.2"
hf-hub = "0.5.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
icu_normalizer = "2"

[dev-dependencies]
anyhow = "1"
clap = { version = "4.6.0", features = ["derive"] }
csv = "1.4.0"
indicatif = "0.18.4"
tokenizers = { version = "0.22.2", features = ["http"] }
